--- a/JSON_Data_Wrangling/JSON_Submission.ipynb
+++ b/JSON_Data_Wrangling/JSON_Submission.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,8 +36,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
+   "execution_count": 212,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -230,20 +232,20 @@
        "[3 rows x 50 columns]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# load data\n",
-    "df = pd.read_json('C:\\\\Users\\jlreg\\Documents\\Springboard\\data_wrangling_json\\data\\world_bank_projects.json')\n",
+    "df = pd.read_json('C:\\\\Users\\jlreg\\Desktop\\Projects\\JSON_Data_Wrangling\\data\\world_bank_projects.json')\n",
     "df.head(3) # Always call head for structure of table and name of col"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -316,33 +318,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "countryname\n",
        "People's Republic of China         19\n",
        "Republic of Indonesia              19\n",
        "Socialist Republic of Vietnam      17\n",
        "Republic of India                  16\n",
        "Republic of Yemen                  13\n",
        "Nepal                              12\n",
-       "People's Republic of Bangladesh    12\n",
        "Kingdom of Morocco                 12\n",
+       "People's Republic of Bangladesh    12\n",
        "Africa                             11\n",
        "Republic of Mozambique             11\n",
-       "dtype: int64"
+       "Name: countryname, dtype: int64"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.groupby('countryname').size().sort_values(ascending=False).head(10)"
+    "countries = df.countryname.value_counts()\n",
+    "countries.head(10)"
    ]
   },
   {
@@ -354,19 +356,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# load json as string to use the json_normalize function\n",
-    "json_string = json.load((open('C:\\\\Users\\jlreg\\Documents\\Springboard\\data_wrangling_json\\data\\world_bank_projects.json')))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
+   "execution_count": 215,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -432,27 +425,30 @@
        "4    5                  Trade and integration"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Use json_normalize function to access nested data\n",
-    "df2 = json_normalize(json_string, 'mjtheme_namecode')\n",
+    "# load json as string to use the json_normalize function\n",
+    "with open('C:\\\\Users\\jlreg\\Desktop\\Projects\\JSON_Data_Wrangling\\data\\world_bank_projects.json') as file:\n",
+    "    data = json.load(file)\n",
+    "data_norm = json_normalize(data,'mjtheme_namecode') #normalize file\n",
+    "\n",
+    "df2 = pd.DataFrame(data_norm)\n",
     "df2.head() \n",
-    "# Null value found in 'name' column"
+    "# There are missing values in 'name' col "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "name\n",
        "Environment and natural resources management    223\n",
        "Rural development                               202\n",
        "Human development                               197\n",
@@ -463,22 +459,23 @@
        "Social dev/gender/inclusion                     119\n",
        "Trade and integration                            72\n",
        "Urban development                                47\n",
-       "dtype: int64"
+       "Name: name, dtype: int64"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Here are the top 10 project themes, but the 'name' column is missing data\n",
-    "df2.groupby(['name']).size().sort_values(ascending=False).head(10)"
+    "themes = df2.name.value_counts()\n",
+    "themes.head(10)\n",
+    "# Here are the top 10 project themes, but the 'name' column is missing data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +507,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,142 +527,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 218,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('C:\\\\Users\\jlreg\\Desktop\\Projects\\JSON_Data_Wrangling\\data\\world_bank_projects.json') as f:\n",
+    "    d = json.load(f)\n",
+    "data_n = json_normalize(d,'mjtheme_namecode') #normalize file\n",
+    "\n",
+    "df3 = pd.DataFrame(data_n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>code</th>\n",
-       "      <th>name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>212</td>\n",
-       "      <td>1</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>363</td>\n",
-       "      <td>1</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1024</td>\n",
-       "      <td>1</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1114</td>\n",
-       "      <td>1</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1437</td>\n",
-       "      <td>1</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1426</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Urban development</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1428</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Urban development</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1470</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Urban development</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1473</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Urban development</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1495</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Urban development</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1499 rows × 2 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "     code               name\n",
-       "212     1                   \n",
-       "363     1                   \n",
-       "1024    1                   \n",
-       "1114    1                   \n",
-       "1437    1                   \n",
-       "...   ...                ...\n",
-       "1426    9  Urban development\n",
-       "1428    9  Urban development\n",
-       "1470    9  Urban development\n",
-       "1473    9  Urban development\n",
-       "1495    9  Urban development\n",
-       "\n",
-       "[1499 rows x 2 columns]"
+       "{'8': 'Human development',\n",
+       " '1': 'Economic management',\n",
+       " '6': 'Social protection and risk management',\n",
+       " '5': 'Trade and integration',\n",
+       " '2': 'Public sector governance',\n",
+       " '11': 'Environment and natural resources management',\n",
+       " '7': 'Social dev/gender/inclusion',\n",
+       " '4': 'Financial and private sector development',\n",
+       " '10': 'Rural development',\n",
+       " '9': 'Urban development',\n",
+       " '3': 'Rule of law'}"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df3 = df2.sort_values(['code', 'name'], ascending=True) # Order 'code' column to use the fillna function to fill later\n",
-    "df3"
+    "name_dict = {}\n",
+    "for row in df3.itertuples():\n",
+    "    if row[2] != '':\n",
+    "        name_dict[row[1]] = row[2] #code is 1, name is 2\n",
+    "name_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# replacing empty strings with NaN so that we can use fillna()\n",
-    "df3.replace(to_replace='', value=np.nan, inplace=True)\n",
-    "df3['name'].fillna(inplace=True, method='bfill') # Using 'bfill' to fill in known values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
+   "execution_count": 232,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "name\n",
        "Environment and natural resources management    250\n",
        "Rural development                               216\n",
        "Human development                               210\n",
@@ -677,84 +595,26 @@
        "Urban development                                50\n",
        "Economic management                              38\n",
        "Rule of law                                      15\n",
-       "dtype: int64"
+       "Name: name, dtype: int64"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# This is the correct answer to question #2. We will confirm this below\n",
-    "df3.groupby(['name']).size().sort_values(ascending=False)"
+    "for row in name_dict:\n",
+    "    df3.name[df3.code == row] = name_dict[row]\n",
+    "df3.name.value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "code\n",
-       "11    250\n",
-       "10    216\n",
-       "8     210\n",
-       "2     199\n",
-       "6     168\n",
-       "4     146\n",
-       "7     130\n",
-       "5      77\n",
-       "9      50\n",
-       "1      38\n",
-       "3      15\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# df2 from earlier 'code' column matches 'name' above\n",
-    "df2.groupby(['code']).size().sort_values(ascending=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "name                                          code\n",
-       "Environment and natural resources management  11      250\n",
-       "Rural development                             10      216\n",
-       "Human development                             8       210\n",
-       "Public sector governance                      2       199\n",
-       "Social protection and risk management         6       168\n",
-       "Financial and private sector development      4       146\n",
-       "Social dev/gender/inclusion                   7       130\n",
-       "Trade and integration                         5        77\n",
-       "Urban development                             9        50\n",
-       "Economic management                           1        38\n",
-       "Rule of law                                   3        15\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Here is the dataframe with missing names filled in\n",
-    "df3.groupby(['name','code']).size().sort_values(ascending=False)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
