--- a/Inferential_Statistics/inferential_statistics_bootstrap/inferential_statistics_2.ipynb
+++ b/Inferential_Statistics/inferential_statistics_bootstrap/inferential_statistics_2.ipynb
@@ -851,7 +851,7 @@
    "source": [
     "__A:__ \n",
     "\n",
-    "I would perform a twi-sided test as above because I can simulate the result as if the change in algorithm had no effect on the click-through rate (null hypothesis).\n",
+    "I would perform a one-sided test because I can simulate the result as if the change in algorithm had no effect on the click-through rate (null hypothesis).\n",
     "\n",
     "$H_0$: There is no difference in click-through rate from the algorith change\n",
     "\n",
