--- a/Inferential_Statistics/inferential_statistics_frequentist/inferential_statistics_1b.ipynb
+++ b/Inferential_Statistics/inferential_statistics_frequentist/inferential_statistics_1b.ipynb
@@ -300,13 +300,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__A:__ Central Limit Theorem Assumptions:\n",
+    "__A:__ \n",
+    "\n",
+    "The data allows me to answer the administrators question because it fits the below assumptions.\n",
+    "\n",
+    "Central Limit Theorem Assumptions:\n",
     "- The data must follow the randomization condition. It must be sampled randomly\n",
     "- Samples should be independent of each other. One sample should not influence the other samples\n",
     "- Sample size should be not more than 10% of the population when sampling is done without replacement\n",
     "- The sample size should be sufficiently large. Now, how we will figure out how large this size should be? Well, it depends on the population. When the population is skewed or asymmetric, the sample size should be large. If the population is symmetric, then we can draw small samples as well\n",
     "\n",
-    "The CLT is the most appropriate test because the sample data fits these conditions"
+    "I'm using a t-test because I'm testing means of the sample.  Using the CLT is appropriate because the sample date fits the above conditions."
    ]
   },
   {
@@ -372,22 +376,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "13815.357346466282"
+       "12725.48718381623"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "m - margin_error"
+    "m + margin_error # looking for lower bound"
    ]
   },
   {
@@ -435,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +542,7 @@
        "10   25    1  26.22         0       0       0   2721.3208               1"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +657,7 @@
        "8   37    1  29.830         2       0       0   6406.41070               0"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +742,7 @@
        "11520.034268775256"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +766,7 @@
        "11.89329903087671"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +791,7 @@
        "Ttest_indResult(statistic=11.893299030876712, pvalue=4.461230231620717e-31)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +834,7 @@
        "Ttest_indResult(statistic=13.298031957975649, pvalue=1.1105103216309125e-37)"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -851,6 +855,8 @@
    "metadata": {},
    "source": [
     "__A:__ \n",
+    "\n",
+    "There is no equivalent z-test function in scipy.stats, but below is a similar test found in statsmodels:\n",
     "\n",
     "Information found at https://www.statsmodels.org/stable/generated/statsmodels.stats.weightstats.ztest.html\n",
     "\n",
